Added PolyToxiQ project to portfolio

--- a/index.html
+++ b/index.html
@@ -656,7 +656,30 @@
             <span>Decision Support</span>
           </div>
         </div>
-        
+         <!-- New Project: PolyToxiQ -->
+        <div class="project-card">
+        <div class="project-top">
+          <div class="folder-icon">
+            <i class="far fa-folder-open"></i>
+          </div>
+          <div class="project-links">
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
+          </div>
+        </div>
+        <h3 class="project-title">PolyToxiQ</h3>
+        <p class="project-description">
+          An AI-based webapp for polymer toxicity prediction using transfer learning from Tox21 additives. Implemented with deep neural networks, zero-shot learning, and AutoGluon for accurate toxicity assessment.
+        </p>
+        <div class="project-tech">
+          <span>Deep Neural Networks</span>
+          <span>Zero-shot Learning</span>
+          <span>AutoGluon</span>
+          <span>Transfer Learning</span>
+          <span>Tox21</span>
+        </div>
+        </div>
+       
         <!-- Project 4 -->
         <div class="project-card">
           <div class="project-top">
