Added new project SpidyTough

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
             <i class="far fa-folder-open"></i>
           </div>
           <div class="project-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/sunilpanda14/PolyToxiQ.git" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
           </div>
         </div>
@@ -697,6 +697,34 @@
           <span>Tox21</span>
         </div>
         </div>
+         <!-- New Project: SpidyTough -->
+         <div class="project-card">
+          <div class="project-top">
+            <div class="folder-icon">
+              <i class="far fa-folder-open"></i>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/sunilpanda14/SpidyTough.git" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+              <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
+            </div>
+          </div>
+          <h3 class="project-title">SpidyTough</h3>
+          <p class="project-description">
+            An ML-based webapp for predicting Aretficial Spider Web Mechanical Toughness over Rupture Iteration. A biomimetic research project inspired by spider silk properties, focusing on developing ultra-strong and flexible materials for medical applications using machine learning to optimize polymer structures.
+          </p>
+          <div class="project-tech">
+            <span>AutoGluon</span>
+            <span>Sckit Learn</span>
+            <span>Pandas</span>
+            <span>Numpy</span>
+            <span>Spider Silk</span>
+            <span>Materials Science</span>
+            <span>Biomimetics</span>
+            <span>ML Optimization</span>
+            <span>Polymer Engineering</span>
+            <span>Structural Analysis</span>
+          </div>
+          </div>
        
         <!-- Project 4 -->
         <div class="project-card">
