--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sunil Kumar Panda | MedTech & AI Professional</title>
+  <title>NeuraMind | Sunil Kumar Panda | MedTech & AI Professional</title>
   <style>
     /* Base styles */
     * {
@@ -524,6 +524,10 @@
 .hero-social-links a:hover {
   color: #58a6ff;
 }
+.logo i {
+  margin-left: 8px;
+  color: #58a6ff; /* Use your accent color */
+}
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -531,7 +535,7 @@
   <div class="container">
     <!-- Navigation -->
     <nav>
-      <a href="#" class="logo">Sunil Kumar Panda</a>
+      <a href="#" class="logo">NeuraMind <i class="fas fa-brain"></i></a>
       <div class="nav-links">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
