--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
           </div>
           <div class="project-links">
             <a href="https://github.com/sunilpanda14/PolyToxiQ.git" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
+            <a href="https://polytoxiq2.streamlit.app/" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
           </div>
         </div>
         <h3 class="project-title">PolyToxiQ</h3>
