updated Skills part

--- a/index.html
+++ b/index.html
@@ -587,11 +587,11 @@
             <div class="skill-item">Deep Learning (DNN/CNN)</div>
             <div class="skill-item">Transfer Learning</div>
             <div class="skill-item">NLP</div>
-            <div class="skill-item">ISO 13485 & 21 CFR Part 820</div>
-            <div class="skill-item">Design Control</div>
+            <div class="skill-item">QMS: ISO 13485 & 21 CFR Part 820</div>
+            <div class="skill-item">Design Control(21 CFR 820.30)</div>
             <div class="skill-item">V&V Testing</div>
-            <div class="skill-item">Risk Management</div>
-            <div class="skill-item">Regulatory Compliance</div>
+            <div class="skill-item">Risk Management(ISO 14971)</div>
+            <div class="skill-item">Regulatory Compliance(EU MDR/FDA)</div>
             <div class="skill-item">Biomechanics</div>
           </div>
         </div>
