--- a/index.html
+++ b/index.html
@@ -581,18 +581,22 @@
           </p>
           <p>Here are some of my key skills and technical competencies:</p>
           <div class="skills">
-            <div class="skill-item">Python</div>
+            <div class="skill-item">Python(Numpy, Pandas, Seaborn, Scikit Learn, Matplotlib, Autogluon)</div>
+            <div class="skill-item">Data Analytics & Tools(Power BI, VS Code, Googlecharts, Streamlit)</div>
             <div class="skill-item">MATLAB</div>
-            <div class="skill-item">Machine Learning</div>
+            <div class="skill-item">Machine Learning(PyTorch, TensorFlow)</div>
             <div class="skill-item">Deep Learning (DNN/CNN)</div>
-            <div class="skill-item">Transfer Learning</div>
+            <div class="skill-item">Transfer Learning(Sentence Transformer)</div>
             <div class="skill-item">NLP</div>
             <div class="skill-item">QMS: ISO 13485 & 21 CFR Part 820</div>
             <div class="skill-item">Design Control(21 CFR 820.30)</div>
             <div class="skill-item">V&V Testing</div>
             <div class="skill-item">Risk Management(ISO 14971)</div>
             <div class="skill-item">Regulatory Compliance(EU MDR/FDA)</div>
-            <div class="skill-item">Biomechanics</div>
+            <div class="skill-item">Biomechanics & 3D Printing</div>
+            <div class="skill-item">FEA & Structural Analysis(ANSYS, LAMMPS)</div>
+            <div class="skill-item">3D Modelling(CATIA, Creo Prametric)</div>
+
           </div>
         </div>
         <div class="about-image">
