--- a/index.html
+++ b/index.html
@@ -581,8 +581,7 @@
           </p>
           <p>Here are some of my key skills and technical competencies:</p>
           <div class="skills">
-            <div class="skill-item">Python(Numpy, Pandas, Seaborn, Scikit Learn, Matplotlib, Autogluon)</div>
-            <div class="skill-item">Data Analytics & Tools(Power BI, VS Code, Googlecharts, Streamlit)</div>
+            <div class="skill-item">Python</div>
             <div class="skill-item">MATLAB</div>
             <div class="skill-item">Machine Learning(PyTorch, TensorFlow)</div>
             <div class="skill-item">Deep Learning (DNN/CNN)</div>
@@ -594,8 +593,8 @@
             <div class="skill-item">Risk Management(ISO 14971)</div>
             <div class="skill-item">Regulatory Compliance(EU MDR/FDA)</div>
             <div class="skill-item">Biomechanics & 3D Printing</div>
-            <div class="skill-item">FEA & Structural Analysis(ANSYS, LAMMPS)</div>
-            <div class="skill-item">3D Modelling(CATIA, Creo Prametric)</div>
+            <div class="skill-item">FEA & Structural Analysis</div>
+            <div class="skill-item">3D Modelling</div>
 
           </div>
         </div>
