--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     <section id="projects" class="projects">
       <h2 class="section-title">Some Things I've Built</h2>
       <div class="project-grid">
-        <!-- Project 1 -->
+      <!-- Project 1 -->
         <div class="project-card">
           <div class="project-top">
             <div class="folder-icon">
@@ -633,8 +633,7 @@
             <span>Regulatory Compliance</span>
           </div>
         </div>
-        
-        <!-- Project 2 -->
+        <!-- <Project 2 -->
         <div class="project-card">
           <div class="project-top">
             <div class="folder-icon">
@@ -656,8 +655,7 @@
             <span>V&V Testing</span>
             <span>Biomechanics</span>
           </div>
-        </div>
-        
+        </div> 
         <!-- Project 3 -->
         <div class="project-card">
           <div class="project-top">
@@ -681,6 +679,7 @@
             <span>Decision Support</span>
           </div>
         </div>
+
          <!-- New Project: PolyToxiQ -->
         <div class="project-card">
         <div class="project-top">
