--- a/index.html
+++ b/index.html
@@ -667,9 +667,9 @@
               <a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
             </div>
           </div>
-          <h3 class="project-title">Risk Management AI Assistant</h3>
+          <h3 class="project-title">Risk Management Assistant (Total Hip Replacement)</h3>
           <p class="project-description">
-            Implemented an AI-based system for automated risk assessment in medical devices, integrating regulatory requirements with real-time monitoring capabilities for enhanced product safety.
+            Implemented an ML-based system for automated risk assessment in Fall Risk of Total Hip Arthroplasty Patients Based on Wearable Sensor Instrumented Performance Tests
           </p>
           <div class="project-tech">
             <span>Python</span>
@@ -677,6 +677,7 @@
             <span>ML Algorithms</span>
             <span>ISO 14971</span>
             <span>Decision Support</span>
+            <span>Failure Analysis</span>
           </div>
         </div>
 
