--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
             <div class="skill-item">Biomechanics & 3D Printing</div>
             <div class="skill-item">FEA & Structural Analysis</div>
             <div class="skill-item">3D Modelling</div>
+            <div class="skill-item">Data Analysis</div>
 
           </div>
         </div>
